--- a/src/ORM/src/AddRepoWidget.ui
+++ b/src/ORM/src/AddRepoWidget.ui
@@ -1,6 +1,9 @@
 <ui version="4.0" >
  <class>AddRepoDialog</class>
  <widget class="QDialog" name="AddRepoDialog" >
+  <property name="windowModality" >
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry" >
    <rect>
     <x>0</x>
