--- a/src/xoscar/src/xoscar_mainwindow.ui
+++ b/src/xoscar/src/xoscar_mainwindow.ui
@@ -339,16 +339,6 @@
          <string>OSCAR Clusters:</string>
         </property>
        </widget>
-       <widget class="QListWidget" name="listOscarClustersWidget" >
-        <property name="geometry" >
-         <rect>
-          <x>10</x>
-          <y>30</y>
-          <width>171</width>
-          <height>611</height>
-         </rect>
-        </property>
-       </widget>
        <widget class="QWidget" name="horizontalLayout" >
         <property name="geometry" >
          <rect>
@@ -406,16 +396,6 @@
          <string>Cluster Partitions:</string>
         </property>
        </widget>
-       <widget class="QListWidget" name="listClusterPartitionsWidget" >
-        <property name="geometry" >
-         <rect>
-          <x>200</x>
-          <y>30</y>
-          <width>181</width>
-          <height>611</height>
-         </rect>
-        </property>
-       </widget>
        <widget class="QWidget" name="horizontalLayout_3" >
         <property name="geometry" >
          <rect>
@@ -435,7 +415,7 @@
          <item>
           <widget class="QToolButton" name="addClusterButton_2" >
            <property name="enabled" >
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="text" >
             <string>...</string>
@@ -448,7 +428,7 @@
          <item>
           <widget class="QToolButton" name="removeClusterButton_2" >
            <property name="enabled" >
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="text" >
             <string>...</string>
@@ -459,6 +439,76 @@
           </widget>
          </item>
         </layout>
+       </widget>
+       <widget class="QGroupBox" name="groupBox_2" >
+        <property name="geometry" >
+         <rect>
+          <x>390</x>
+          <y>370</y>
+          <width>551</width>
+          <height>291</height>
+         </rect>
+        </property>
+        <property name="title" >
+         <string>Cluster Management</string>
+        </property>
+        <widget class="QWidget" name="verticalLayout_6" >
+         <property name="geometry" >
+          <rect>
+           <x>180</x>
+           <y>100</y>
+           <width>160</width>
+           <height>80</height>
+          </rect>
+         </property>
+         <layout class="QVBoxLayout" >
+          <property name="margin" >
+           <number>0</number>
+          </property>
+          <property name="spacing" >
+           <number>6</number>
+          </property>
+          <item>
+           <widget class="QPushButton" name="saveClusterInfoButton" >
+            <property name="text" >
+             <string>Save Cluster Configuration</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushButton" >
+            <property name="text" >
+             <string>Deploy Cluster</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </widget>
+       <widget class="QListWidget" name="listOscarClustersWidget" >
+        <property name="geometry" >
+         <rect>
+          <x>10</x>
+          <y>30</y>
+          <width>171</width>
+          <height>611</height>
+         </rect>
+        </property>
+        <item>
+         <property name="text" >
+          <string>oscar</string>
+         </property>
+        </item>
+       </widget>
+       <widget class="QListWidget" name="listClusterPartitionsWidget" >
+        <property name="geometry" >
+         <rect>
+          <x>200</x>
+          <y>30</y>
+          <width>181</width>
+          <height>611</height>
+         </rect>
+        </property>
        </widget>
        <widget class="QGroupBox" name="groupBox" >
         <property name="geometry" >
@@ -499,12 +549,12 @@
             <item>
              <widget class="QLabel" name="label_7" >
               <property name="text" >
-               <string>Name:</string>
+               <string>Partition name:</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QLineEdit" name="lineEdit" />
+             <widget class="QLineEdit" name="partitonNameEditWidget" />
             </item>
            </layout>
           </item>
@@ -592,44 +642,6 @@
             </property>
             <property name="text" >
              <string>Setup as diskless</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </widget>
-       <widget class="QGroupBox" name="groupBox_2" >
-        <property name="geometry" >
-         <rect>
-          <x>390</x>
-          <y>370</y>
-          <width>551</width>
-          <height>291</height>
-         </rect>
-        </property>
-        <property name="title" >
-         <string>Cluster Management</string>
-        </property>
-        <widget class="QWidget" name="verticalLayout_6" >
-         <property name="geometry" >
-          <rect>
-           <x>180</x>
-           <y>100</y>
-           <width>160</width>
-           <height>80</height>
-          </rect>
-         </property>
-         <layout class="QVBoxLayout" >
-          <property name="margin" >
-           <number>0</number>
-          </property>
-          <property name="spacing" >
-           <number>6</number>
-          </property>
-          <item>
-           <widget class="QPushButton" name="pushButton" >
-            <property name="text" >
-             <string>Deploy Cluster</string>
             </property>
            </widget>
           </item>
