[xoscar] Now display the following partition information when a partition is selected: partition name and number of nodes. We still do not handle the Linux distribution id of the partition.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6625 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 09d20f8375453b7b8eec2f1d490c12f646848c58

--- a/src/xoscar/src/xoscar_mainwindow.ui
+++ b/src/xoscar/src/xoscar_mainwindow.ui
@@ -503,16 +503,6 @@
          </property>
         </item>
        </widget>
-       <widget class="QListWidget" name="listClusterPartitionsWidget" >
-        <property name="geometry" >
-         <rect>
-          <x>200</x>
-          <y>30</y>
-          <width>181</width>
-          <height>611</height>
-         </rect>
-        </property>
-       </widget>
        <widget class="QGroupBox" name="groupBox" >
         <property name="geometry" >
          <rect>
@@ -597,7 +587,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QSpinBox" name="spinBox" />
+             <widget class="QSpinBox" name="PartitionNumberNodesSpinBox" />
             </item>
            </layout>
           </item>
@@ -650,6 +640,16 @@
           </item>
          </layout>
         </widget>
+       </widget>
+       <widget class="QListWidget" name="listClusterPartitionsWidget" >
+        <property name="geometry" >
+         <rect>
+          <x>200</x>
+          <y>30</y>
+          <width>181</width>
+          <height>611</height>
+         </rect>
+        </property>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_5" >
