--- a/src/xoscar/src/xoscar_mainwindow.ui
+++ b/src/xoscar/src/xoscar_mainwindow.ui
@@ -567,7 +567,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="comboBox" />
+             <widget class="QComboBox" name="partitionDistroComboBox" />
             </item>
            </layout>
           </item>
