--- a/src/xoscar/src/xoscar_mainwindow.ui
+++ b/src/xoscar/src/xoscar_mainwindow.ui
@@ -416,7 +416,7 @@
           <number>6</number>
          </property>
          <item>
-          <widget class="QToolButton" name="addClusterButton_2" >
+          <widget class="QToolButton" name="addPartitionButton" >
            <property name="enabled" >
             <bool>true</bool>
            </property>
@@ -431,7 +431,7 @@
          <item>
           <widget class="QToolButton" name="removeClusterButton_2" >
            <property name="enabled" >
-            <bool>true</bool>
+            <bool>false</bool>
            </property>
            <property name="text" >
             <string>...</string>
