[xoscar] Basic code to display network configuration details for a selected partition. We do not grab the MAC address and the IP address from the database yet.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6638 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 09cf9493036618f8e3025d06a2f7798a2ad32a09

--- a/src/xoscar/src/xoscar_mainwindow.ui
+++ b/src/xoscar/src/xoscar_mainwindow.ui
@@ -310,7 +310,7 @@
      </widget>
     </widget>
     <widget class="QWidget" name="page_3" >
-     <widget class="QTabWidget" name="tabWidget" >
+     <widget class="QTabWidget" name="networkConfigurationTabWidget" >
       <property name="enabled" >
        <bool>true</bool>
       </property>
@@ -656,21 +656,6 @@
        <attribute name="title" >
         <string>Network Configuration</string>
        </attribute>
-       <widget class="QTreeWidget" name="treeWidget" >
-        <property name="geometry" >
-         <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>281</width>
-          <height>341</height>
-         </rect>
-        </property>
-        <column>
-         <property name="text" >
-          <string>OSCAR Nodes</string>
-         </property>
-        </column>
-       </widget>
        <widget class="QWidget" name="layoutWidget" >
         <property name="geometry" >
          <rect>
@@ -1363,6 +1348,21 @@
           </widget>
          </widget>
         </widget>
+       </widget>
+       <widget class="QTreeWidget" name="oscarNodesTreeWidget" >
+        <property name="geometry" >
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>281</width>
+          <height>341</height>
+         </rect>
+        </property>
+        <column>
+         <property name="text" >
+          <string>OSCAR Nodes</string>
+         </property>
+        </column>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_6" >
