This check-in fixes #483 - Remove code duplication between MAC.pm and MACops.pm.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8010 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 410e2815ad4dd2326b458b540947eb95b8fedd39

--- a/src/NodeMgmt/NodeMgmtDialog.ui
+++ b/src/NodeMgmt/NodeMgmtDialog.ui
@@ -1955,7 +1955,7 @@
     <include location="local" impldecl="in declaration">use NodeSettingsDialog;</include>
     <include location="local" impldecl="in declaration">use Qt::attributes qw(settingsDialog macprocessTimer mac_collectorProcess);</include>
     <include location="local" impldecl="in declaration">use lib "$ENV{OSCAR_HOME}/lib";</include>
-    <include location="local" impldecl="in declaration">use OSCAR::MACops;</include>
+    <include location="local" impldecl="in declaration">use OSCAR::MAC;</include>
     <include location="local" impldecl="in declaration">my @macs;</include>
     <include location="local" impldecl="in declaration">my $nodes;</include>
     <include location="local" impldecl="in declaration">my %usedmacs;</include>
